# awareness-sdk

./: .gitignore  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  DEVELOPMENT.md  LICENSE  README.md  ROADMAP.md  VISION.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
awareness_sdk/: __init__.py  config.py  pipeline.py  telemetry.py  validators.py
awareness_sdk/examples/: quickstart_chat.py
awareness_sdk/integrations/: __init__.py  hf_transformers.py  openai_client.py
awareness_sdk/layers/: __init__.py  frequency.py  mirror.py  presence.py  resonance.py
data/: awareness_fields_min.json
docs/: REPO_SETTINGS.md
examples/prompts/: frequency_mapping.yaml  mirror_layer.txt  resonance_templates.yaml
scripts/: init_and_push_whei02.bat  init_and_push_whei02.ps1
tests/: test_frequency.py  test_layers.py  test_pipeline.py  test_presence.py
